--- a/module-2/Probability-Intro/your-code/main.ipynb
+++ b/module-2/Probability-Intro/your-code/main.ipynb
@@ -24,7 +24,26 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
+    "your solution here:\n",
+    "\n",
+    "which are false?-\n",
+    "\n",
+    "𝑃(𝐴∪𝐵)=0.6\n",
+    "    0.8 != 0.6 FALSE\n",
+    "    \n",
+    "𝑃(𝐴∩𝐵𝐶)=0.2\n",
+    "    02 = 0.2   TRUE!\n",
+    "\n",
+    "𝑃(𝐴∩(𝐵∪𝐵𝐶))=0.4\n",
+    "    0.3 != 0.4 FALSE\n",
+    "\n",
+    "𝑃(𝐴𝐶∩𝐵𝐶)=0.3\n",
+    "    0.2 != 0.3 FALSE\n",
+    "\n",
+    "𝑃((𝐴∩𝐵)𝐶)=0.9\n",
+    "    1 - 0.1 \n",
+    "    0.9 = 0.9 TRUE!\n",
+    "\n",
     "\"\"\""
    ]
   },
@@ -50,6 +69,16 @@
    "source": [
     "\"\"\"\n",
     "your solution here\n",
+    "\n",
+    "Taking a white ball out. \n",
+    " 10/30 = 1/3\n",
+    "Taking a white ball out after taking a black ball out. \n",
+    " 10/29\n",
+    "Taking a red ball out after taking a black and a red ball out. \n",
+    " 12/28 = 3/7\n",
+    "Taking a red ball out after taking a black and a red ball out with reposition. \n",
+    " 12/30 = 2/5\n",
+    "\n",
     "\"\"\""
    ]
   },
@@ -75,7 +104,18 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
+    "your solution here:\n",
+    "\n",
+    "C | R = 0.5\n",
+    "R = 0.1\n",
+    "C = 0.4\n",
+    "\n",
+    "P(R|C) = P(0.5)*(0.1)\n",
+    "        -------------- = 0.125 = ~ 12.5% CHANCE OF ACTUAL RAIN \n",
+    "            P(0.4)                       GIVEN THAT IT'S A CLOUDY MORNING\n",
+    "                                         NOT TOO BAD, HAVE A PICNIC.\n",
+    "\n",
+    "\n",
     "\"\"\""
    ]
   },
@@ -102,12 +142,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Yes</th>\n",
+       "      <th>No</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>480</td>\n",
+       "      <td>324</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Women</td>\n",
+       "      <td>520</td>\n",
+       "      <td>351</td>\n",
+       "      <td>169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Total</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>675</td>\n",
+       "      <td>325</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Category  Total  Yes   No\n",
+       "0      Men    480  324  156\n",
+       "1    Women    520  351  169\n",
+       "2    Total   1000  675  325"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "d = {'Category': ['Men', 'Women', 'Total'],'Total': [480, 520, 1000], 'Yes': [324, 351, 675], 'No': [156, 169, 325]}\n",
+    "df = pd.DataFrame(data=d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -117,6 +235,22 @@
    "source": [
     "\"\"\"\n",
     "your solution here\n",
+    "\n",
+    "INDEPENDENT EVENTS: \n",
+    "P(A ∩ B) = P(A) * P(B)\n",
+    "\n",
+    "P(A) = P(M_y)\n",
+    "P(B) = P(W_y)\n",
+    "\n",
+    "\n",
+    "P(M_y) = 324/480 = 0.675            SO YES THEY ARE INDEPENDENT EVENTS,\n",
+    "                                    REGARDLES OF FEMALE OR MALE SAYING YES THEY WANT MORE LIGHTS AR NIGHT\n",
+    "P(W_y) = 351/520 = 0.675        \n",
+    "                                           \n",
+    "                                           \n",
+    "P(YES) = 324 + 351\n",
+    "         --------- = 0.675 \n",
+    "           1000\n",
     "\"\"\""
    ]
   }
@@ -137,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
