--- a/module-2/Probability-Intro/your-code/main.ipynb
+++ b/module-2/Probability-Intro/your-code/main.ipynb
@@ -31,14 +31,14 @@
     "\n",
     "𝑃(𝐴∪𝐵) = P(A) + P(B) - 𝑃(𝐴∩𝐵) = .3 + .6 - .1 = .8\n",
     "\n",
-    "𝑃(𝐴∩𝐵𝐶)=0.2  # is true because P(Bc) is the probability of B not happening, which would be the probability of A happening or the probability of neither A nor B happening. A union BC, would just be A because it would be the intersection of A and everything not B\n",
+    "𝑃(𝐴∩𝐵𝐶) = 0.2  # is true because P(Bc) is the probability of B not happening, which would be the probability of A happening or the probability of neither A nor B happening. A union BC, would just be A because it would be the intersection of A and everything not B\n",
     "\n",
-    "𝑃(𝐴∩(𝐵∪𝐵𝐶)) = .4 # is false because it is essentially asking for the intersection of A and everything, which is basically just A (.3)\n",
+    "𝑃(𝐴∩(𝐵∪𝐵𝐶)) = .4 # is false because it is essentially asking for the intersection of A and everything (1), which is basically just A (.3)\n",
     "\n",
-    "𝑃(𝐴𝐶∩𝐵𝐶)=0.3 # is false because it is asking for the intersection of not A and not B, which is essentially everything that is neither A nor B, which is .2\n",
+    "𝑃(𝐴𝐶∩𝐵𝐶) = 0.3 # is false because it is asking for the intersection of not A and not B, which is essentially everything that is neither in A nor B, which is .2\n",
     "\n",
     "\n",
-    "𝑃((𝐴∩𝐵)𝐶)=0.9 # is basically the same as the above, and so this statement is also false \n",
+    "𝑃((𝐴∩𝐵)𝐶) = 0.9 # is true because 𝐴∩𝐵 = .1, and so the complement of that would be 1 - .1, which is .9\n",
     "\n",
     "\n",
     "\n",
@@ -82,7 +82,8 @@
     "#Taking a white ball out = 10/(10+8+12) = 10/30 = 1/3\n",
     "#Taking a white ball out after taking a black ball out = 10/(10+7+12) = 10/29\n",
     "#Taking a red ball out after taking a black and a red ball out = 11/(10+7+11) = 11/28\n",
-    "#Taking a red ball out after taking a black and a red ball out with reposition "
+    "#Taking a red ball out after taking a black and a red ball out with reposition \n",
+    "#12/30 = 2/5"
    ]
   },
   {
@@ -110,6 +111,21 @@
     "your solution here\n",
     "\"\"\"\n",
     "\n",
+    "#.5 of all rainy days start off cloudy, which means that .5 of all rainy days do not start off cloudy\n",
+    "#.4 of days start off cloudy, which means that .6 of days do not start off cloudy\n",
+    "\n",
+    "#3 out of 30 days of the year tend to be rainy.\n",
+    "\n",
+    "#You know that it is cloudy outside.  Since .40 of days start off cloudy, that means that only 12 days of the month start off cloudy.\n",
+    "\n",
+    "#Within the days that rain, only .5 of them start off cloudy...which means that .5 of them do not start off cloudy. \n",
+    "\n",
+    "#This means that out of the 3 days of the month in which it rains, 50% (or 1.5 days) do not start off cloudy...which means they would\n",
+    "#lie within the 18 days of the month that do not start off cloudy\n",
+    "\n",
+    "#so therefore, you are left with 1.5 days that end up with rain...out of 12 days that start out cloudy...\n",
+    "\n",
+    "#1.5/12 = .125 or 12.5% chance of rain\n",
     "\n"
    ]
   },
@@ -140,7 +156,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "#Even with the exra male answering 'yes', the proportion of men who answer yes is about the same as the proportion of women \n",
+    "#who answer yes (both are around 67.5%) so it looks like it does not matter if the person is male or female the % of people who say yes will be roughly the same \n",
+    "\n",
+    "\n"
    ]
   },
   {
