--- a/module-2/Hypothesis-Testing/your-code/main.ipynb
+++ b/module-2/Hypothesis-Testing/your-code/main.ipynb
@@ -12,11 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd \n",
     "\n"
    ]
   },
@@ -31,11 +34,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33178</td>\n",
+       "      <td>ZYLINSKA,  KATARZYNA</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>72510.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33179</td>\n",
+       "      <td>ZYMANTAS,  LAURA C</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>48078.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33180</td>\n",
+       "      <td>ZYMANTAS,  MARK E</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>90024.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33181</td>\n",
+       "      <td>ZYRKOWSKI,  CARLO E</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>93354.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33182</td>\n",
+       "      <td>ZYSKOWSKI,  DARIUSZ</td>\n",
+       "      <td>CHIEF DATA BASE ANALYST</td>\n",
+       "      <td>DoIT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>115932.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>33183 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Name                              Job Titles  \\\n",
+       "0          AARON,  JEFFERY M                                SERGEANT   \n",
+       "1            AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2        AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3        ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4          ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "...                      ...                                     ...   \n",
+       "33178  ZYLINSKA,  KATARZYNA                           POLICE OFFICER   \n",
+       "33179     ZYMANTAS,  LAURA C                          POLICE OFFICER   \n",
+       "33180      ZYMANTAS,  MARK E                          POLICE OFFICER   \n",
+       "33181    ZYRKOWSKI,  CARLO E                          POLICE OFFICER   \n",
+       "33182   ZYSKOWSKI,  DARIUSZ                  CHIEF DATA BASE ANALYST   \n",
+       "\n",
+       "             Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0                POLICE                 F           Salary            NaN   \n",
+       "1                POLICE                 F           Salary            NaN   \n",
+       "2      GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3           WATER MGMNT                 F           Salary            NaN   \n",
+       "4                  OEMC                 P           Hourly           20.0   \n",
+       "...                 ...               ...              ...            ...   \n",
+       "33178            POLICE                 F           Salary            NaN   \n",
+       "33179            POLICE                 F           Salary            NaN   \n",
+       "33180            POLICE                 F           Salary            NaN   \n",
+       "33181            POLICE                 F           Salary            NaN   \n",
+       "33182              DoIT                 F           Salary            NaN   \n",
+       "\n",
+       "       Annual Salary  Hourly Rate  \n",
+       "0           101442.0          NaN  \n",
+       "1            94122.0          NaN  \n",
+       "2           101592.0          NaN  \n",
+       "3           110064.0          NaN  \n",
+       "4                NaN        19.86  \n",
+       "...              ...          ...  \n",
+       "33178        72510.0          NaN  \n",
+       "33179        48078.0          NaN  \n",
+       "33180        90024.0          NaN  \n",
+       "33181        93354.0          NaN  \n",
+       "33182       115932.0          NaN  \n",
+       "\n",
+       "[33183 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "employees_advanced = pd.read_csv('/Users/katherineling/Downloads/Current_Employee_Names__Salaries__and_Position_Titles.csv')\n",
+    "\n",
+    "employees_advanced"
    ]
   },
   {
@@ -47,12 +260,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    101442.0\n",
+       "1     94122.0\n",
+       "2    101592.0\n",
+       "3    110064.0\n",
+       "4         NaN\n",
+       "Name: Annual Salary, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "employees_advanced['Annual Salary'].head()\n"
    ]
   },
   {
@@ -64,12 +294,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name                     0\n",
+       "Job Titles               0\n",
+       "Department               0\n",
+       "Full or Part-Time        0\n",
+       "Salary or Hourly         0\n",
+       "Typical Hours        25161\n",
+       "Annual Salary         8022\n",
+       "Hourly Rate          25161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "employees_advanced.isnull()\n",
+    "\n",
+    "employees_advanced.isnull().sum()"
    ]
   },
   {
@@ -81,12 +333,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8022"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "employees_advanced['Annual Salary'].isnull().sum()"
    ]
   },
   {
@@ -105,11 +369,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>ADMIN HEARNG</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>ANIMAL CONTRL</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>AVIATION</td>\n",
+       "      <td>1629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>BOARD OF ELECTION</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>BOARD OF ETHICS</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>BUDGET &amp; MGMT</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>BUILDINGS</td>\n",
+       "      <td>269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>BUSINESS AFFAIRS</td>\n",
+       "      <td>171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>CITY CLERK</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>CITY COUNCIL</td>\n",
+       "      <td>411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>COMMUNITY DEVELOPMENT</td>\n",
+       "      <td>207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>COPA</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>CULTURAL AFFAIRS</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>DISABILITIES</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>DoIT</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>FAMILY &amp; SUPPORT</td>\n",
+       "      <td>615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>FINANCE</td>\n",
+       "      <td>560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>FIRE</td>\n",
+       "      <td>4641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>HUMAN RELATIONS</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>21</td>\n",
+       "      <td>HUMAN RESOURCES</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22</td>\n",
+       "      <td>INSPECTOR GEN</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>LAW</td>\n",
+       "      <td>407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>24</td>\n",
+       "      <td>LICENSE APPL COMM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>MAYOR'S OFFICE</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>2102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>27</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>13414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>28</td>\n",
+       "      <td>POLICE BOARD</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>29</td>\n",
+       "      <td>PROCUREMENT</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>PUBLIC LIBRARY</td>\n",
+       "      <td>1015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>31</td>\n",
+       "      <td>STREETS &amp; SAN</td>\n",
+       "      <td>2198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>32</td>\n",
+       "      <td>TRANSPORTN</td>\n",
+       "      <td>1140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33</td>\n",
+       "      <td>TREASURER</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>34</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>1879</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Department   Name\n",
+       "0            ADMIN HEARNG     39\n",
+       "1           ANIMAL CONTRL     81\n",
+       "2                AVIATION   1629\n",
+       "3       BOARD OF ELECTION    107\n",
+       "4         BOARD OF ETHICS      8\n",
+       "5           BUDGET & MGMT     46\n",
+       "6               BUILDINGS    269\n",
+       "7        BUSINESS AFFAIRS    171\n",
+       "8              CITY CLERK     84\n",
+       "9            CITY COUNCIL    411\n",
+       "10  COMMUNITY DEVELOPMENT    207\n",
+       "11                   COPA    116\n",
+       "12       CULTURAL AFFAIRS     65\n",
+       "13           DISABILITIES     28\n",
+       "14                   DoIT     99\n",
+       "15       FAMILY & SUPPORT    615\n",
+       "16                FINANCE    560\n",
+       "17                   FIRE   4641\n",
+       "18       GENERAL SERVICES    980\n",
+       "19                 HEALTH    488\n",
+       "20        HUMAN RELATIONS     16\n",
+       "21        HUMAN RESOURCES     79\n",
+       "22          INSPECTOR GEN     87\n",
+       "23                    LAW    407\n",
+       "24      LICENSE APPL COMM      1\n",
+       "25         MAYOR'S OFFICE     85\n",
+       "26                   OEMC   2102\n",
+       "27                 POLICE  13414\n",
+       "28           POLICE BOARD      2\n",
+       "29            PROCUREMENT     92\n",
+       "30         PUBLIC LIBRARY   1015\n",
+       "31          STREETS & SAN   2198\n",
+       "32             TRANSPORTN   1140\n",
+       "33              TREASURER     22\n",
+       "34            WATER MGMNT   1879"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "\n",
+    "\n",
+    "unique_departments = employees_advanced['Department'].unique()\n",
+    "\n",
+    "len(unique_departments)\n",
+    "\n",
+    "count_employee_department = employees_advanced.groupby('Department').agg({'Name':'count'}).reset_index()\n",
+    "\n",
+    "count_employee_department\n",
     "\n"
    ]
   },
@@ -124,11 +646,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
+    "\n",
+    "import numpy as np\n",
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -271,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
