--- a/module-2/Hypothesis-Testing/your-code/main.ipynb
+++ b/module-2/Hypothesis-Testing/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[33183 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "Name: Annual Salary, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,16 +333,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8022"
+       "33183"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,9 @@
    "source": [
     "# Your code here:\n",
     "\n",
-    "employees_advanced['Annual Salary'].isnull().sum()"
+    "employees_advanced['Annual Salary'].notnull().count()\n",
+    "\n",
+    "employees_advanced['Hourly Rate'].notnull().count()"
    ]
   },
   {
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +618,7 @@
        "34            WATER MGMNT   1879"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,14 +648,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=20.6198057854942, pvalue=4.3230240486229894e-92)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
     "\n",
     "import numpy as np\n",
-    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "from scipy.stats import ttest_1samp\n",
+    "\n",
+    "employees_advanced[['Name','Hourly Rate']].dropna().count()\n",
+    "\n",
+    "\n",
+    "\n",
+    "employees_advanced[['Name','Hourly Rate']].dropna().mean()\n",
+    "\n",
+    "employees_advanced[['Name','Hourly Rate']].dropna().std()\n",
+    "\n",
+    "Hourly_Rate = employees_advanced['Hourly Rate'].dropna()\n",
+    "\n",
+    "Hourly_Rate\n",
+    "\n",
+    "ttest_1samp(Hourly_Rate, 30)\n",
+    "\n",
+    "#pvalue too small...much smaller than .025, so we reject the null hypothesis\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -670,11 +701,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=3.081997005712994, pvalue=0.0020603403550965137)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.stats import ttest_1samp\n",
+    "\n",
+    "# AnnualSalary = employees_advanced[['Department'] == ['Police']]\n",
+    "\n",
+    "\n",
+    "police_salary=employees_advanced[employees_advanced['Department']==\"POLICE\"]['Annual Salary'].dropna(how='all')\n",
+    "\n",
+    "police_salary\n",
+    "\n",
+    "\n",
+    "\n",
+    "annualsalary_test = ttest_1samp(police_salary, 86000)\n",
+    "\n",
+    "\n",
+    "annualsalary_test\n",
+    "\n",
+    "#Reject null hypothesis because pvalue is smaller than .05\n",
+    "\n",
     "\n"
    ]
   },
@@ -687,12 +749,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Hourly</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Department</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>STREETS &amp; SAN</td>\n",
+       "      <td>1862</td>\n",
+       "      <td>336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>1513</td>\n",
+       "      <td>366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>1273</td>\n",
+       "      <td>829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>AVIATION</td>\n",
+       "      <td>1082</td>\n",
+       "      <td>547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>765</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>TRANSPORTN</td>\n",
+       "      <td>725</td>\n",
+       "      <td>415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>PUBLIC LIBRARY</td>\n",
+       "      <td>299</td>\n",
+       "      <td>716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>FAMILY &amp; SUPPORT</td>\n",
+       "      <td>287</td>\n",
+       "      <td>328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>CITY COUNCIL</td>\n",
+       "      <td>64</td>\n",
+       "      <td>347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>FINANCE</td>\n",
+       "      <td>44</td>\n",
+       "      <td>516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LAW</td>\n",
+       "      <td>40</td>\n",
+       "      <td>367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ANIMAL CONTRL</td>\n",
+       "      <td>19</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>MAYOR'S OFFICE</td>\n",
+       "      <td>8</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>BUSINESS AFFAIRS</td>\n",
+       "      <td>7</td>\n",
+       "      <td>164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>CULTURAL AFFAIRS</td>\n",
+       "      <td>7</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>COMMUNITY DEVELOPMENT</td>\n",
+       "      <td>4</td>\n",
+       "      <td>203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>HUMAN RESOURCES</td>\n",
+       "      <td>4</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>3</td>\n",
+       "      <td>485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>PROCUREMENT</td>\n",
+       "      <td>2</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>FIRE</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>BUDGET &amp; MGMT</td>\n",
+       "      <td>2</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>HUMAN RELATIONS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>INSPECTOR GEN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>DoIT</td>\n",
+       "      <td>0</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>LICENSE APPL COMM</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>DISABILITIES</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>COPA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>CITY CLERK</td>\n",
+       "      <td>0</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>POLICE BOARD</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>BUILDINGS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>BOARD OF ETHICS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>BOARD OF ELECTION</td>\n",
+       "      <td>0</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>TREASURER</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>ADMIN HEARNG</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Salary or Hourly       Hourly  Salary\n",
+       "Department                           \n",
+       "STREETS & SAN            1862     336\n",
+       "WATER MGMNT              1513     366\n",
+       "OEMC                     1273     829\n",
+       "AVIATION                 1082     547\n",
+       "GENERAL SERVICES          765     215\n",
+       "TRANSPORTN                725     415\n",
+       "PUBLIC LIBRARY            299     716\n",
+       "FAMILY & SUPPORT          287     328\n",
+       "CITY COUNCIL               64     347\n",
+       "FINANCE                    44     516\n",
+       "LAW                        40     367\n",
+       "ANIMAL CONTRL              19      62\n",
+       "POLICE                     10   13404\n",
+       "MAYOR'S OFFICE              8      77\n",
+       "BUSINESS AFFAIRS            7     164\n",
+       "CULTURAL AFFAIRS            7      58\n",
+       "COMMUNITY DEVELOPMENT       4     203\n",
+       "HUMAN RESOURCES             4      75\n",
+       "HEALTH                      3     485\n",
+       "PROCUREMENT                 2      90\n",
+       "FIRE                        2    4639\n",
+       "BUDGET & MGMT               2      44\n",
+       "HUMAN RELATIONS             0      16\n",
+       "INSPECTOR GEN               0      87\n",
+       "DoIT                        0      99\n",
+       "LICENSE APPL COMM           0       1\n",
+       "DISABILITIES                0      28\n",
+       "COPA                        0     116\n",
+       "CITY CLERK                  0      84\n",
+       "POLICE BOARD                0       2\n",
+       "BUILDINGS                   0     269\n",
+       "BOARD OF ETHICS             0       8\n",
+       "BOARD OF ELECTION           0     107\n",
+       "TREASURER                   0      22\n",
+       "ADMIN HEARNG                0      39"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "import numpy as np\n",
+    "from scipy.stats import ttest_1samp\n",
+    "\n",
+    "\n",
+    "pd.crosstab(index=employees_advanced['Department'], columns=employees_advanced['Salary or Hourly']).sort_values(by=['Hourly'], ascending=False)\n",
+    "\n",
+    "#Streets & Sanitation is department with most hourly employees\n"
    ]
   },
   {
@@ -704,11 +1028,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564707717e-21)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "\n",
+    "street_san_salaries = employees_advanced[employees_advanced['Department']==\"STREETS & SAN\"]['Hourly Rate'].dropna(how='all')\n",
+    "\n",
+    "street_san_salaries\n",
+    "\n",
+    "ttest_1samp(street_san_salaries, 35)\n",
+    "\n",
+    "#Reject null because pvalue is super small\n",
     "\n"
    ]
   },
@@ -733,11 +1076,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9.046248541994956, 56.53086689056761)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "\n",
+    "from scipy.stats import sem, t\n",
+    "from scipy import mean\n",
+    "confidence = 0.95\n",
+    "\n",
+    "# n = len(Hourly_Rate)\n",
+    "\n",
+    "# print(n)\n",
+    "# m = mean(Hourly_Rate)\n",
+    "# std_err = sem(Hourly_Rate)\n",
+    "# h = std_err * t.ppf((1 + confidence) / 2, n - 1)\n",
+    "\n",
+    "# start = m - h\n",
+    "# print (start)\n",
+    "# end = m + h\n",
+    "# print (end)\n",
+    "\n",
+    "sigma = np.std(Hourly_Rate)\n",
+    "\n",
+    "sigma\n",
+    "\n",
+    "t.interval(.95, df=8021, loc=mean(Hourly_Rate), scale=sigma)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -750,12 +1130,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50669.436308959324, 122303.39269730746)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "police_salary=employees_advanced[employees_advanced['Department']==\"POLICE\"]['Annual Salary'].dropna(how='all')\n",
+    "\n",
+    "police_salary\n",
+    "\n",
+    "n = len(police_salary)\n",
+    "\n",
+    "df = n - 1\n",
+    "\n",
+    "df\n",
+    "\n",
+    "sigma = np.std(police_salary)\n",
+    "\n",
+    "t.interval(.95, df=8021, loc=mean(police_salary), scale=sigma)\n"
    ]
   },
   {
@@ -778,6 +1182,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
+    "\n",
     "\n"
    ]
   }
