updategit add /Users/gracemartinez/ironhack/daft-miami-1019-labs/module-3/Supervised-Learning/your-code/project\ draft.ipynb

--- a/module-3/Supervised-Learning/your-code/project draft.ipynb
+++ b/module-3/Supervised-Learning/your-code/project draft.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "#store the data we get as a dataframe\n",
     "import pandas as pd\n",
     "\n",
-    "#convert the response as a strcuctured json\n",
+    "#convert the response as a structured json\n",
     "import json\n",
     "\n",
     "#mathematical operations on lists\n",
@@ -27,7 +27,22 @@
     "\n",
     "#parse the datetimes we get from NOAA\n",
     "from datetime import datetime\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#add the access token you got from NOAA\n",
     "Token = 'xKIlBHakeOEdyBfhPkKcDKyLzjofRpNY'\n",
     "\n",
@@ -190,8 +205,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -356,7 +373,7 @@
        "4              NaN  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +396,7 @@
        "(11898, 15)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +420,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,51 +431,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "Index(['Catalog_Number', 'Calendar_Date', 'Eclipse_Time', 'Delta_T_(s)',\n",
+       "       'Lunation_Number', 'Saros_Number', 'Eclipse_Type', 'Gamma',\n",
+       "       'Eclipse_Magnitude', 'Latitude', 'Longitude', 'Sun_Altitude',\n",
+       "       'Sun_Azimuth', 'Path_Width_(km)', 'Central_Duration'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(solar.columns)"
+    "solar.columns = solar.columns.str.replace(' ','_')\n",
+    "solar.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 59-60: truncated \\uXXXX escape (<ipython-input-112-7a92ef395151>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-112-7a92ef395151>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    ['Gamma', 'Distance of the shadow cone axis from the center of Earth (\\units of equatorial radii)\\ at the instant of greatest eclipse.'],\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 59-60: truncated \\uXXXX escape\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Import pandas library \n",
+    "import pandas as pd \n",
+    "  \n",
+    "# initialize list of lists \n",
+    "column_data = [['Catalog Number', 'Sequential number of the eclipse in the catalog links to the map published in the Five Millennium Canon of Solar Eclipses: -1999 to +3000.'], ['Calendar Date', 'Calendar Date at instant of Greatest Eclipse. Gregorian Calendar is used for dates after 1582 Oct 15. Julian Calendar is used for dates before 1582 Oct 04.'], \n",
+    "               ['Eclipse Time', 'Duration of Time'], \n",
+    "               ['Delta T (\\s)\\', \\'the arithmetic difference between Dynamical Time and Universal Time. It is a measure of the accumulated clock error due to the variable rotation period of Earth.'], \n",
+    "               ['Lunation Number', 'the number of synodic months since New Moon of 2000 Jan 06. The Brown Lunation Number can be determined by adding 953.'], ['Saros Number', 'Saros series number of eclipse. Each eclipse in a Saros is separated by an interval of 18 years 11.3 days.'], \n",
+    "               ['Eclipse Type', 'Eclipse Type where: P  = Partial Eclipse. A  = Annular Eclipse. T  = Total Eclipse. H  = Hybrid or Annular/Total Eclipse. Second character in Eclipse Type: \"m\" = Middle eclipse of Saros series. \"n\" = Central eclipse with no northern limit. \"s\" = Central eclipse with no southern limit. \"+\" = Non-central eclipse with no northern limit. \"-\" = Non-central eclipse with no southern limit. \"2\" = Hybrid path begins total and ends annular. \"3\" = Hybrid path begins annular and ends total. \"b\" = Saros series begins (\\first eclipse in series)\\. \"e\" = Saros series ends (\\last eclipse in series)\\.'],\n",
+    "                ['Gamma', 'Distance of the shadow cone axis from the center of Earth (\\units of equatorial radii)\\ at the instant of greatest eclipse.'],\n",
+    "                ['Eclipse Magnitude', 'the fraction of the Sun\\'s diameter obscured by the Moon. For annular, total and hybrid eclipses, this value is actually the diameter ratio of Moon/Sun.'], \n",
+    "                ['Latitude', 'Latitude where greatest eclipse is seen.'], ['Longitude', 'Longitude where greatest eclipse is seen.'], ['Sun Altitude', 'Sun\\'s altitude at greatest eclipse.']\n",
+    "                ['Sun Azimuth', 'Sun\\'s azimuth at greatest eclipse.'], ['Path Width (\\km)\\', 'Width of the path of totality or annularity at greatest eclipse (\\kilometers)\\.'], ['Central Duration', 'Central Line Duration of total or annular phase at greatest eclipse.']]\n",
+    "\n",
+    "  \n",
+    "# Create the pandas DataFrame \n",
+    "solar_df = pd.DataFrame(column_data, columns = ['Column_Name', 'Description']) \n",
+    "  \n",
+    "# print dataframe. \n",
+    "solar_df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Catalog Number         int64\n",
-       "Calendar Date         object\n",
-       "Eclipse Time          object\n",
-       "Delta T (s)            int64\n",
-       "Lunation Number        int64\n",
-       "Saros Number           int64\n",
-       "Eclipse Type          object\n",
+       "Catalog_Number         int64\n",
+       "Calendar_Date         object\n",
+       "Eclipse_Time          object\n",
+       "Delta_T_(s)            int64\n",
+       "Lunation_Number        int64\n",
+       "Saros_Number           int64\n",
+       "Eclipse_Type          object\n",
        "Gamma                float64\n",
-       "Eclipse Magnitude    float64\n",
+       "Eclipse_Magnitude    float64\n",
        "Latitude              object\n",
        "Longitude             object\n",
-       "Sun Altitude           int64\n",
-       "Sun Azimuth            int64\n",
-       "Path Width (km)       object\n",
-       "Central Duration      object\n",
+       "Sun_Altitude           int64\n",
+       "Sun_Azimuth            int64\n",
+       "Path_Width_(km)       object\n",
+       "Central_Duration      object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +540,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# need to know what each column mean/represents to know if they're a correct type"
+    "# need to know what each column means/represents to know if they're a correct type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "- Need to change:\n",
+    "\n",
+    "Calendar_Date         object -> (-)Y/M/D, ex. -1997 May 22\n",
+    "Eclipse_Time          object -> Date\n",
+    "\n",
+    "- will drop for python, have again for tableau:\n",
+    "\n",
+    "Latitude              object, separate into 2 columns: decimal# & Letter\n",
+    "Longitude             object, separate into 2 columns: decimal# & Letter\n",
+    "\n",
+    "- i dont think i need them:     need to see the correlation with the Y\n",
+    "\n",
+    "Path_Width_(km)       object    1/3 of null values. \n",
+    "Central_Duration      object    1/3 of null values. "
    ]
   },
   {
@@ -521,126 +611,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# can categorize from 'H' to 'Tm' as 'Other' due to their lower frequency\n",
-    "# we will drop the remaining low valued types from 'An' to 'T+'"
+    "# we will "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "solar.loc[solar['Eclipse Type'].str.contains('H'), 'Eclipse Type'] = 'Other'"
+    "def eclipseClean(x):\n",
+    "    if 'P' in x:\n",
+    "        return('P')\n",
+    "    if 'A' in x:\n",
+    "        return('A')\n",
+    "    if 'T' in x:\n",
+    "        return('T')\n",
+    "    if 'H' in x:\n",
+    "        return('H')\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solar.loc[solar['Eclipse Type'].str.contains('Pb'), 'Eclipse Type'] = 'Other'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solar.loc[solar['Eclipse Type'].str.contains('Pe'), 'Eclipse Type'] = 'Other'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solar.loc[solar['Eclipse Type'].str.contains('Am'), 'Eclipse Type'] = 'Other'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solar.loc[solar['Eclipse Type'].str.contains('Tm'), 'Eclipse Type'] = 'Other'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "P        3875\n",
-       "A        3755\n",
-       "T        3049\n",
-       "Other    1038\n",
-       "An         36\n",
-       "A+         34\n",
-       "A-         34\n",
-       "As         25\n",
-       "T-         17\n",
-       "Tn         14\n",
-       "Ts         12\n",
-       "T+          9\n",
-       "Name: Eclipse Type, dtype: int64"
+       "P    4200\n",
+       "A    3956\n",
+       "T    3173\n",
+       "H     569\n",
+       "Name: Eclipse Type New, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solar['Eclipse Type'].value_counts()"
+    "solar['Eclipse Type New'] = list(map(eclipseClean,solar['Eclipse_Type']))\n",
+    "solar['Eclipse Type New'].value_counts()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solar.columns = solar.columns.str.replace(' ','_')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Catalog_Number', 'Calendar_Date', 'Eclipse_Time', 'Delta_T_(s)',\n",
-       "       'Lunation_Number', 'Saros_Number', 'Eclipse_Type', 'Gamma',\n",
-       "       'Eclipse_Magnitude', 'Latitude', 'Longitude', 'Sun_Altitude',\n",
-       "       'Sun_Azimuth', 'Path_Width_(km)', 'Central_Duration'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "solar.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -4907,6 +4923,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-101-64156d691fe5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf"
+   ]
   },
   {
    "cell_type": "code",
