--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -172,7 +172,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ...not taking this approach..."
+   ]
   },
   {
    "cell_type": "code",
@@ -186,7 +188,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# new approach"
+   ]
   },
   {
    "cell_type": "markdown",
