--- a/module-3/Supervised-Learning/your-code/final project code.ipynb
+++ b/module-3/Supervised-Learning/your-code/final project code.ipynb
@@ -181,13 +181,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# new approach"
    ]
@@ -2650,20 +2643,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -4694,7 +4673,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# there are 2 categorical & numericals"
+   ]
   },
   {
    "cell_type": "code",
