--- a/module-3/Feature-Extraction/your-code/notebooks/main.ipynb
+++ b/module-3/Feature-Extraction/your-code/notebooks/main.ipynb
@@ -1794,7 +1794,7 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "google_reviews.head()"
+    "google_reviews.head()\n"
    ]
   },
   {
@@ -1927,7 +1927,8 @@
     "\n",
     "review_missing_removed = google_reviews\n",
     "\n",
-    "review_missing_removed.head()"
+    "review_missing_removed.head()\n",
+    "\n"
    ]
   },
   {
@@ -1996,7 +1997,8 @@
     "    Returns:\n",
     "        The number of occurrences of `Positive` in the column data.\n",
     "    \"\"\"\n",
-    "    return 0"
+    "    return 0\n",
+    "\n"
    ]
   },
   {
